loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:8: error: ')' expected but '}' found.
  }
  ^